реализовал функциональность ItemRequest, поправил модели и Dto, пересмотрел репозитории и переписал методы без использования query